<resources>

    <string name="app_name">TimedShot</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="button_capture">Capture</string>
    <string name="hint_password">password</string>
    <string name="hint_username">username</string>
    <string name="hint_server_address">server address</string>
    <string name="text_interval">Interval:</string>
    <string name="interval_unit">min</string>
    <string name="text_off">off</string>
    <string name="title_activity_capture">CaptureActivity</string>
    <string name="cd_preview_image">preview image</string>
    <string name="filename_prefix">filename prefix</string>
    <string name="directory">directory</string>
    <string name="label_add_overlay_info">add overlay info</string>
    <string name="label_file_has_timestamp">file has timestamp</string>
    <string name="hello">TODO</string>
    <string name="btn_show">TODO</string>
    <string name="btn_sleep">TODO</string>

</resources>
