<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:id="@+id/settings_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/server"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hint_server_address"
                android:inputType="text" >
            </EditText>

            <EditText
                android:id="@+id/user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hint_username"
                android:inputType="text" />

            <EditText
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/file_prefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/filename_prefix"
                android:inputType="text" />

            <EditText
                android:id="@+id/file_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/directory"
                android:inputType="text" />

            <LinearLayout
                android:id="@+id/container_timestamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true" >

                <TextView
                    android:id="@+id/label_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_file_has_timestamp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ToggleButton
                    android:id="@+id/toggle_timestamp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_overlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true" >

                <TextView
                    android:id="@+id/label_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_add_overlay_info"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ToggleButton
                    android:id="@+id/toggle_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5" />
            </LinearLayout>
        </LinearLayout>

        <SeekBar
            android:id="@+id/interval_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/settings_container"
            android:layout_marginTop="62dp"
            android:max="60"
            android:progress="5" />

        <TextView
            android:id="@+id/interval_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/interval_bar"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="26dp"
            android:text="@string/text_interval"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/interval_label_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/interval_label"
            android:layout_alignBottom="@+id/interval_label"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/interval_label_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/interval_label_current"
            android:layout_toRightOf="@+id/interval_label_current"
            android:text="@string/interval_unit"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/interval_bar"
            android:layout_marginBottom="18dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_capture" />
    </RelativeLayout>

</ScrollView>